--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -31,7 +31,8 @@ bind -T copy-mode-vi 'v' send -X begin-selection
 bind -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # Use colors in the right way
-set-option -g default-terminal "screen-256color"
+set-option -g default-terminal "tmux-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 #Set the left and right status
 set -g status-right '#[bg=colour3]#[fg=colour0] %b %d %H:%M '
@@ -39,3 +40,6 @@ set -g status-right '#[bg=colour3]#[fg=colour0] %b %d %H:%M '
 #Set the background and foreground color
 set -g status-bg colour0
 set -g status-fg colour3
+
+# Increase history
+set-option -g history-limit 10000
